--- a/_posts/2015-04-22-float.markdown
+++ b/_posts/2015-04-22-float.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "The Flow"
-subtitle: "A browser's <strong>default</strong> behavior"
+title: "Float"
+subtitle: "The most <strong>unpredictable</strong> property"
 ---
 
 You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
