--- a/_posts/2015-04-22-float.markdown
+++ b/_posts/2015-04-22-float.markdown
@@ -4,22 +4,35 @@ title: "Float"
 subtitle: "The most <strong>unpredictable</strong> property"
 ---
 
-You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
+### There is not such thing as an **unstyled** HTML document. Each browser comes with a default CSS: the **user agent stylesheet**.
 
-To add new posts, simply add a file in the `_posts` directory that follows the convention `YYYY-MM-DD-name-of-post.ext` and includes the necessary front matter. Take a look at the source for this post to get an idea about how it works.
+The default styling relies upon the HTML **structure**: how elements are nested, whether they are `block` or `inline`, in which order they appear in the code...
 
-Jekyll also offers powerful support for code snippets:
-
-{% highlight ruby %}
-def print_hi(name)
-  puts "Hi, #{name}"
-end
-print_hi('Tom')
-#=> prints 'Hi, Tom' to STDOUT.
-{% endhighlight %}
-
-Check out the [Jekyll docs][jekyll] for more info on how to get the most out of Jekyll. File all bugs/feature requests at [Jekyll’s GitHub repo][jekyll-gh]. If you have questions, you can ask them on [Jekyll’s dedicated Help repository][jekyll-help].
-
-[jekyll]:      http://jekyllrb.com
-[jekyll-gh]:   https://github.com/jekyll/jekyll
-[jekyll-help]: https://github.com/jekyll/jekyll-help
+<div class="browser">
+  <div class="browser-bar">
+    <div></div>
+    <div></div>
+  </div>
+  <div class="browser-body">
+    <div class="box box-alpha">
+      <div class="box box-beta">
+        123
+      </div>
+    </div>
+    <div class="box box-alpha">
+      1234 123
+    </div>
+    <div class="box box-beta">
+      123 12 12345
+    </div>
+    <div class="box box-gamma">
+      1234 123 123456
+    </div>
+    <div class="box box-delta">
+      12345 12 123
+    </div>
+    <div class="box box-epsilon">
+      12 1234 12345
+    </div>
+  </div>
+</div>
