--- a/_posts/2015-04-22-float.markdown
+++ b/_posts/2015-04-22-float.markdown
@@ -4,35 +4,73 @@ title: "Float"
 subtitle: "The most <strong>unpredictable</strong> property"
 ---
 
-### There is not such thing as an **unstyled** HTML document. Each browser comes with a default CSS: the **user agent stylesheet**.
+> There is not such thing as an **unstyled** HTML document. Each browser comes with a default CSS: the **user agent stylesheet**.
 
 The default styling relies upon the HTML **structure**: how elements are nested, whether they are `block` or `inline`, in which order they appear in the code...
+
+### Fluid
+
+A `block` element is **fluid**:
+
+* **width**  
+a block will take up the whole width available
+* **wrapping**  
+if a block's inline content doesn't fit on a single line, it will wrap itself
+* **height**  
+a block's height varies automatically to accomodate for its content
 
 <div class="browser">
   <div class="browser-bar">
     <div></div>
+  </div>
+  <div class="browser-body">
+    <div class="box box-alpha">
+      A block element will fill up the whole <strong>width</strong>, while its <strong>height</strong> will vary automatically to accomodate for its content.
+    </div>
+  </div>
+</div>
+
+### Order
+
+<div class="browser">
+  <div class="browser-bar">
     <div></div>
   </div>
   <div class="browser-body">
     <div class="box box-alpha">
-      <div class="box box-beta">
-        123
-      </div>
-    </div>
-    <div class="box box-alpha">
-      1234 123
+      First
     </div>
     <div class="box box-beta">
-      123 12 12345
+      Second
     </div>
     <div class="box box-gamma">
-      1234 123 123456
+      Third
     </div>
     <div class="box box-delta">
-      12345 12 123
+      Fourth
     </div>
     <div class="box box-epsilon">
-      12 1234 12345
+      Fifth
+    </div>
+  </div>
+</div>
+
+<aside>
+  Each <code>block</code> appears from <strong>top</strong> to <strong>bottom</strong>, in the order in which they appear in the HTML code.
+</aside>
+
+### Stack
+
+<div class="browser">
+  <div class="browser-bar">
+    <div></div>
+  </div>
+  <div class="browser-body">
+    <div class="box box-alpha">
+      This parent is behind
+      <div class="box box-beta">
+        This nested child is on top of its parent
+      </div>
     </div>
   </div>
 </div>
