--- a/_posts/2015-04-22-float.md
+++ b/_posts/2015-04-22-float.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "How <strong>CSS float</strong> works"
+title: "<strong>Float</strong>"
 subtitle: "The most <strong>unpredictable</strong> property"
 ---
 
