Verdana, white, simple

--- a/_posts/2015-04-20-flow.md
+++ b/_posts/2015-04-20-flow.md
@@ -4,7 +4,7 @@ title: "The <strong>Flow</strong>"
 subtitle: "The browser's <strong>default</strong> behavior"
 ---
 
-There is no such thing as an **unstyled** HTML document. Each browser comes with a default CSS: the **user agent stylesheet**.
+There is no such thing as an **unstyled** HTML document. Each webpage renders at least _one_ CSS: the **user agent stylesheet**.
 
 The default styling relies upon the HTML **structure**: the content's length, how elements are nested, in which order they appear in the code...
 
