--- a/_posts/2015-04-22-float.md
+++ b/_posts/2015-04-22-float.md
@@ -4,79 +4,6 @@ title: "<strong>Float</strong>"
 subtitle: "The most <strong>unpredictable</strong> property"
 ---
 
-<!-- > There is not such thing as an **unstyled** HTML document. Each browser comes with a default CSS: the **user agent stylesheet**. -->
+CSS floats are frowned upon because they not only affect the HTML element they're applied upon, but only that element's parent, siblings, and even ancestors.
 
-The default styling relies upon the HTML **structure**: how elements are nested, whether they are `block` or `inline`, in which order they appear in the code...
 
-### Fluidity
-
-A `block` element is **fluid**:
-
-* **width: 100%**  
-a block will take up the whole width available
-* **word wrap**  
-if a block's inline content doesn't fit on a single line, it will continue on a new line
-* **height: auto**  
-a block's height varies automatically to accomodate for its content
-
-<div class="browser">
-  <div class="browser-bar">
-    <div></div>
-  </div>
-  <div class="browser-body">
-    <div class="box box-alpha">
-      A block element will fill up the whole <strong>width</strong> available, while its <strong>height</strong> will vary automatically to accomodate for its content.
-      <br>
-      <span data-typer-targets="You can add even more text,This block will continue expanding,This line is most probably long enough to trigger a new one by wrapping the text"></span>
-    </div>
-  </div>
-</div>
-
-### Ordering
-
-<div class="browser">
-  <div class="browser-bar">
-    <div></div>
-  </div>
-  <div class="browser-body">
-    <div class="box box-alpha">
-      First
-    </div>
-    <div class="box box-beta">
-      Second
-    </div>
-    <div class="box box-gamma">
-      Third
-    </div>
-    <div class="box box-delta">
-      Fourth
-    </div>
-    <div class="box box-epsilon">
-      Fifth
-    </div>
-  </div>
-</div>
-
-<aside>
-  Each <code>block</code> appears from <strong>top</strong> to <strong>bottom</strong>, in the order in which they appear in the HTML code.
-</aside>
-
-### Stacking
-
-<div class="browser">
-  <div class="browser-bar">
-    <div></div>
-  </div>
-  <div class="browser-body">
-    <div class="box box-alpha">
-      This parent is behind
-      <div class="box box-beta">
-        This nested child is on top of its parent
-      </div>
-    </div>
-  </div>
-</div>
-
-<aside>
-  Each <strong>nested</strong> element appears <strong>on top</strong> of its parent.
-</aside>
